style: wish button style change, fix: last items not visible in product page 1. overflow handled in wish button in product details page. 2. sort and filter button overlapping with the items card  in mobile version in product page.

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -56,7 +56,7 @@ a {
   flex-wrap: wrap;
   justify-content: center;
   width: 100%;
-  margin-bottom: 10%;
+  margin-bottom: 3rem;
 }
 .items > a {
   margin: 3%;
@@ -365,6 +365,7 @@ a {
   position: absolute;
   top: 0;
   right: 0;
+  overflow: hidden;
 }
 .productpage-addwish .wish {
   background: transparent;
@@ -458,6 +459,7 @@ a {
 .user {
   display: flex;
   justify-content: center;
+  margin-top: 2rem;
 }
 .user-data {
   display: flex;
